@@ -1,0 +1,33 @@
+#!/bin/sh
+
+# Check that `include' fails on unredable files
+# WARNING: ratfor must not abort on failed include. Check for this, too.
+
+. ./defs.sh || exit 99
+
+echo 'NOTINCLUDED' > unread.r
+chmod a-r unread.r
+ls -l unread.r 2>&1 || :
+test -f unread.r
+test ! -r unread.r
+
+cat >tst.r <<EOF
+include unread.r
+#2
+x3
+#4
+y5
+include unread.r
+stillalive
+EOF
+
+run_RATFOR -e 1 tst.r || testcase_FAIL
+r='include: unread\.r: cannot open for reading: [pP]ermission denied'
+$GREP "^tst\\.r:1: $r" stderr || testcase_FAIL
+$GREP "^tst\\.r:6: $r" stderr || testcase_FAIL
+$GREP -i 'NOTINCLUDED' stdout && testcase_FAIL
+$GREP 'stillalive' stdout || testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
