@@ -1,0 +1,16 @@
+#!/bin/sh
+
+# Check that ratfor barfs if input file is unreadable.
+
+. ./defs.sh || exit 99
+
+test ! -f none.r
+
+run_RATFOR -e 1 -- none.r || testcase_FAIL
+rx='none\.r: cannot open for reading: [nN]o such file or directory'
+$GREP "$rx" stderr || testcase_FAIL
+test -s stdout && testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
